--- a/src/css/base.css
+++ b/src/css/base.css
@@ -9,60 +9,159 @@
   --color-text: #ece8e1;
   --color-bg: #060606;
   --color-link: inherit;
-  --color-link-hover: #b42429;
+  --color-link-hover: #060606;
   --c1: #b42429;
-  --c2: #588B8B;
-  --c3: #9882AC;
+  --c2: #588b8b;
+  --c3: #9882ac;
+  --dark-spring-green: #02724a;
+  --pomp-and-power: #8473a2;
+  --eerie-black: #191919;
+  --khaki: #bda67d;
+  --paynes-gray: #4d656c;
   --page-padding: 1.5rem 2rem;
 }
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: var(--eerie-black);
+}
+::-webkit-scrollbar-thumb {
+  background: var(--khaki);
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--pomp-and-power);
 }
 body {
   margin: 0;
   color: var(--color-text);
   background-color: var(--color-bg);
-  font-family: 'Neue Montreal', -apple-system, Helvetica, Arial, sans-serif;
+  font-family: "Radio", -apple-system, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
@@ -102,9 +201,9 @@ a:focus-visible {
   outline: 1px solid rgb(0, 255, 64);
   background: transparent;
 }
-img{
-    width:100%;
-    height: auto;
+img {
+  width: 100%;
+  height: auto;
 }
 .unbutton {
   background: none;
@@ -138,69 +237,214 @@ main {
   overflow: hidden;
 }
 /* Global Classes */
-.page-width >  div{
-    max-width: 1600px;
-    margin:0 auto;
+.page-width > div {
+  max-width: 1600px;
+  margin: 0 auto;
 }
-.h1{
-    font-size: clamp(2rem,8vw, 5rem);
-    font-weight: 500;
+.pd-d {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
-.emph{
-    font-style: italic;
-    color: var(--c1);
+.h1 {
+  font-size: clamp(4rem, 8vw, 6rem);
+  font-weight: 700;
 }
-.if-br-90{
-    filter: brightness(0.9);
+.h2 {
+  text-transform: uppercase;
+  font-size: clamp(1.7rem, 5vw, 4rem);
+  font-weight: 700;
+  margin-bottom: 20px;
 }
-.if-br-80{
-    filter: brightness(0.8);
+.bg-g {
+  background-color: var(--dark-spring-green);
 }
-.if-br-70{
-    filter: brightness(0.7);
+.bg-p {
+  background-color: var(--pomp-and-power);
 }
-.if-br-60{
-    filter: brightness(0.6);
+.bg-b{
+  background-color: var(--paynes-gray);
 }
-.if-br-50{
-    filter: brightness(0.5);
+.bg-r{
+  background-color: var(--c1);
 }
-.if-br-40{
-    filter: brightness(0.4);
+.emph {
+  font-style: italic;
+  color: var(--c1);
 }
-.if-br-30{
-    filter: brightness(0.3);
+.if-br-90 {
+  filter: brightness(0.9);
 }
-.if-br-20{
-    filter: brightness(0.2);
+.if-br-80 {
+  filter: brightness(0.8);
 }
-.if-br-10{
-    filter: brightness(0.1);
+.if-br-70 {
+  filter: brightness(0.7);
 }
-.if-br-0{
-    filter: brightness(0);
+.if-br-60 {
+  filter: brightness(0.6);
+}
+.if-br-50 {
+  filter: brightness(0.5);
+}
+.if-br-40 {
+  filter: brightness(0.4);
+}
+.if-br-30 {
+  filter: brightness(0.3);
+}
+.if-br-20 {
+  filter: brightness(0.2);
+}
+.if-br-10 {
+  filter: brightness(0.1);
+}
+.if-br-0 {
+  filter: brightness(0);
+}
+/* Animated Titles */
+.title-full {
+  font-size: clamp(2.5rem, 10vw, 7rem);
+  line-height: 1.1;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  position: relative;
+  padding: 10svh 1em;
+}
+.content--full {
+  padding: 0;
+}
+.content__title {
+  font-size: 5vw;
+  line-height: 0.8;
+  counter-increment: section;
+  text-align: center;
+  display: grid;
+  gap: 2rem;
+}
+.grain-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  background-image: url("/src/media/grain.gif");
+  background-size: 500px;
+  image-rendering: pixelated;
+  background-repeat: repeat;
+  z-index: 999999999;
+  mix-blend-mode: overlay;
+}
+.menuButton{
+  all: unset;
+  background-color: var(--dark-spring-green);
+  padding: 7px 15px;
+  border-radius: 10px;
+  color: var(--color-text);
+  position: fixed;
+  z-index: 5000;
+  top: 40px;
+  left: 40px;
+  filter: var(--shadow);
+  font-weight:700;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 250ms;
+}
+.menuButton:hover{
+  color: black;
+  background-color: var(--c1);
+}
+.menuButton.activo{
+  background-color: black;
+  color: var(--color-text);
+  filter: none;
+  border-radius: 10px 0 10px 0;
+}
+.menuButton.activo:hover{
+  color: var(--c1);
+}
+.menu{
+  background-color: var(--dark-spring-green);
+  position: fixed;
+  z-index: 4900;
+  top: 40px;
+  left: 40px;
+  padding: 0 20px 0 20px;
+  border-radius: 35px;
+  min-width: 370px;
+  max-width: 600px;
+  max-height: 0px;
+  overflow: hidden;
+  color: var(--color-text);
+  transition: all 500ms;
+}
+.menu.activo{
+  background-color: var(--dark-spring-green);
+  padding: 3em 20px 20px 20px;
+  max-height: 500px;
+  border-radius: 15px;
+  filter: var(--shadow);
+}
+.navPages{
+  list-style: none;
+  padding: 0;
+  font-size: 2rem;
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+  gap: 10px;
+  white-space: nowrap;
+}
+.navPages li a{
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 2.5rem;
+  position: relative;
+}
+.navPages li a::after{
+  content:'';
+  position: absolute;
+  bottom:0;
+  left:0;
+  width:0%;
+  height: 3px;
+  background-color: var(--color-text);
+  transition: all 250ms;
+}
+.navPages li:hover a::after{
+  background-color: var(--color-link-hover);
+  width: 100%;
+}
+nav .hr{
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-text);
+  border-radius: 3px;
+  margin: 1em auto;
+}
+.navSocials{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  text-align: center;
+  max-width: 300px;
+  margin: 0 auto;
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 
-/* Header */
-header{
-    position: fixed;
-    top:0.5rem;
-    left:0.5rem;
-    background-color: rgba(255,255,255,0.1);
-    /* color: #0d0d0d; */
-    border-radius: 10px;
-    box-shadow:inset 0 0 10px -3px rgba(255,255,255,0.5);
-    z-index: 99999;
-}
-header nav ul{
-    padding:5px 20px;
-    margin:0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap:1rem;
-    align-items: center;
-    justify-content: center;
-}
-header nav ul a{
-    text-transform: uppercase;
+@media screen and (max-width: 540px){
+  :root{
+    font-size: 12pt;
+  }
+  .menu, .menuButton{
+    top: 10px;
+    left:10px;
+  }
 }
