--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,16 +1,4 @@
 @font-face {
-    font-family: "NeueBit";
-    src: url(/src/fonts/PPNeueBit-Regular.woff2) format("woff2");
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: "NeueBit";
-    src: url(/src/fonts/PPNeueBit-Bold.woff2) format("woff2");
-    font-weight: 600;
-    font-style: normal;
-}
-@font-face {
     font-family: "Mondwest";
     src: url(/src/fonts/PPMondwest-Regular.woff2) format("woff2");
     font-weight: 400;
@@ -23,50 +11,38 @@
     font-style: normal;
 }
 @font-face {
-    font-family: "Neue Montreal";
-    src: url("/src/fonts/PPNeueMontreal-Regular.woff2") format("woff2");
+    font-family: "Radio";
+    src: url("/src/fonts/PPRadioGrotesk-Regular.woff2") format("woff2");
     font-weight: 400;
     font-style: normal;
 }
 @font-face {
-    font-family: "Neue Montreal";
-    src: url("/src/fonts/PPNeueMontreal-Bold.woff2") format("woff2");
-    font-weight: 700;
+    font-family: "Radio";
+    src: url("/src/fonts/PPRadioGrotesk-Bold.woff2") format("woff2");
+    font-weight: 600;
     font-style: normal;
 }
 @font-face {
-    font-family: "Neue Montreal";
-    src: url("/src/fonts/PPNeueMontreal-Book.woff2") format("woff2");
+    font-family: "Radio";
+    src: url("/src/fonts/PPRadioGrotesk-Light.woff2") format("woff2");
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
-    font-family: "Neue Montreal";
-    src: url("/src/fonts/PPNeueMontreal-Medium.woff2") format("woff2");
-    font-weight: 500;
-    font-style: normal;
-}
-@font-face {
-    font-family: "Neue Montreal";
-    src: url("/src/fonts/PPNeueMontreal-Italic.woff2") format("woff2");
+    font-family: "Radio";
+    src: url("/src/fonts/PPRadioGrotesk-RegularItalic.woff2") format("woff2");
     font-weight: 400;
     font-style: italic;
 }
 @font-face {
-    font-family: "Neue Montreal";
-    src: url("/src/fonts/PPNeueMontreal-Bold.woff2") format("woff2");
+    font-family: "Radio";
+    src: url("/src/fonts/PPRadioGrotesk-BoldItalic.woff2") format("woff2");
     font-weight: 700;
     font-style: italic;
 }
 @font-face {
-    font-family: "Neue Montreal";
-    src: url("/src/fonts/PPNeueMontreal-Book.woff2") format("woff2");
+    font-family: "Radio";
+    src: url("/src/fonts/PPRadioGrotesk-LightItalic.woff2") format("woff2");
     font-weight: 300;
-    font-style: italic;
-}
-@font-face {
-    font-family: "Neue Montreal";
-    src: url("/src/fonts/PPNeueMontreal-Medium.woff2") format("woff2");
-    font-weight: 500;
     font-style: italic;
 }
