--- a/src/css/home.css
+++ b/src/css/home.css
@@ -22,7 +22,7 @@
     object-position: center center;
 }
 .home-banner .banner-container .overlay{
-    min-height: 80svh;
+    min-height: 100svh;
     position: relative;
     z-index: 20;
     padding: 1rem;
@@ -30,6 +30,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    text-shadow: 0 0 2px rgba(0,0,0,0.7);
     gap:1rem;
 }
 .home-banner .banner-container .underlay::before{
@@ -47,64 +48,82 @@
     width: 100%;
     max-width: 1000px;
     margin:0 auto;
+    line-height: 1.2;
 }
-.home-banner .banner-container .overlay p.h1{
+.home-banner .banner-container .overlay .h1{
+    width: 100%;
+    max-width: 1000px;
+    margin:0 auto;
     overflow: hidden;
     white-space: nowrap;
 }
 
-.home-banner .banner-container .overlay p.subtext{
-    font-size: 1.2rem;
-}
-/* Link Grid */
-.pageGrid{
-    padding: 2rem 1rem;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-}
-.grid-item{
-    display: block;
-    position: relative;
-    border: 2px solid var(--c1);
-    margin:0 -2px -2px 0;
-    min-height: 40svh;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-}
-.grid-item .underlay{
-    overflow: hidden;
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    z-index:0;
-}
-.grid-item .underlay img{
-    display: block;
+.home-banner .banner-container .overlay .subtext{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center center;
-    transition: all 250ms;
+    max-width: 1000px;
+    margin:0 auto;
+    font-size: 1.5rem;
 }
-.grid-item:hover .underlay img{
-    filter: brightness(0.3) grayscale(1);
+.fodas-container{
+    /* background: var(--pomp-and-power); */
+    background: #000;
 }
-.grid-item-content{
+.fodas{
+    max-width: 1600px;
+    margin: 0 auto;
+    text-transform: uppercase;
+    font-family: 'Mondwest', 'Radio', sans-serif;
+    color:var(--dark-spring-green);
+}
+.fodas.author{
+    text-transform: uppercase;
+    font-size: clamp(1.7rem,5vw,3rem);
+    line-height: 1;
+    font-weight: 400;
+}
+
+.twocl-grid{
+    max-width: 1600px;
+    margin:0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:1rem;
+    align-items: center;
+    justify-items: center;
+}
+.gc-container{
+    padding: 0 2rem;
+}
+.gc-container  .gc-content{
+    max-width: 500px;
+}
+.gc-container  .gc-content p{
+    line-height: 1.2;
+    margin-bottom:20px;
+    font-size:clamp(1rem,2vw,1.3rem);
+}
+.sk-g{
+    background-color: #000;
+    border-radius:50%;
+    overflow:hidden;
+    width:fit-content;
+}
+.sk-g img{
+    display: block;
     position: relative;
-    z-index:20;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    font-size: 1.2rem;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    /* max-width:500px; */
+    z-index:1;
 }
-.grid-item-content h2{
-    font-size: clamp(2.5rem,8vw,5rem);
-    font-family: 'NeueBit';
-    font-weight: 700;
+.about-me-title{
+    font-size: clamp(4rem,12vw,8rem);
+    font-weight: 800;
+    text-transform: uppercase;
+}
+.about-me p{
+    padding: 1rem;
+    max-width: 1000px;
+    margin:0 auto;
+    font-size: 1.1rem;
 }
