--- a/src/css/base.css
+++ b/src/css/base.css
@@ -13,6 +13,7 @@
   --c1: #b42429;
   --c2: #588b8b;
   --c3: #9882ac;
+  --white: #ece8e1;
   --dark-spring-green: #02724a;
   --pomp-and-power: #8473a2;
   --eerie-black: #191919;
@@ -251,7 +252,7 @@ main {
 }
 .h2 {
   text-transform: uppercase;
-  font-size: clamp(1.7rem, 5vw, 4rem);
+  font-size: clamp(2.5rem, 5vw, 4rem);
   font-weight: 700;
   margin-bottom: 20px;
 }
@@ -441,7 +442,7 @@ nav .hr{
 
 @media screen and (max-width: 540px){
   :root{
-    font-size: 12pt;
+    font-size: 14pt;
   }
   .menu, .menuButton{
     top: 10px;
